Fx deprecations and apply IDE suggestions for JDK 21